--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": "/",
+    "rootDir": "src",
     "outDir": "dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src","tests"],
-  "exclude": ["node_modules","dist"]
+  "include": ["src"],
+  "exclude": ["node_modules", "tests"]
 }
